# Formal-languages

./: CMakeLists.txt  CYK  ERLY  KS-GTESTS  PDKA_minPDKA  README.md  REGULAR.cpp  automat  formal.cpp
